--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="images/favicon.ico" rel="shortcut icon">
   <meta charset="UTF-8">
-  <script src="/javascripts/vendor.js"></script>
+  <script src="javascripts/vendor.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.2.37/vue.global.js"></script>
 </head>
 
@@ -223,7 +223,7 @@
         </script>
 
         </footer>
-        <link rel="stylesheet" href="/stylesheets/all.css">
+        <link rel="stylesheet" href="stylesheets/all.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </body>
 
