--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <!-- 甜度 -->
                     <div class="mb-3">
-                      <label for="productNum" class="form-label d-block">冰塊*</label>
+                      <label for="productNum" class="form-label d-block">甜度*</label>
                       <div class="form-check form-check-inline" v-for="(sugar, key) in sugarType" :key="'sugar' + key">
                         <input class="form-check-input" name="sugarType" type="radio" :id="'sugar' + key" :value="sugar"
                           v-model="tempSelected.sugar">
